--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/blancpain/cv-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "gh-pages": "^5.0.0",
     "nanoid": "^4.0.2",
     "react-dom": "^18.2.0"
   }
